toast payment message

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Archivo de estilos -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/toast.css">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <title>Order Summary Component</title>
@@ -47,11 +48,28 @@
                 </div>
             </div>
             <div class="card__footer">
-                <button class="btn btn--primary btn--primary--hover">Proceed to Payment</button>
+                <button id="payment-button" class="btn btn--primary btn--primary--hover">Proceed to Payment</button>
                 <button class="btn btn--default  btn--default--hover">Cancel Order</button>
             </div>
         </div>
     </section>
+    <!-- toast payment -->
+    <div class="toast">
+
+        <div class="toast__content">
+            <i class="fas fa-solid fa-check  toast--check"></i>
+
+            <div class="toast__message">
+                <span class="toast__text toast__text-1">Success</span>
+                <span class="text text-2">Your payment has been </span>
+                <span class="text text-2"> successfully processed</span>
+            </div>
+        </div>
+        <i class="fa-solid fa-xmark toast__close toast__close--hover"></i>
+        <div class="toast__progress toast__progress--active"></div>
+    </div>
+    <!-- end toast payment -->
+    <script src="js/index.js"></script>
 </body>
 
 </html>
